# drbl-manage

./: .gitignore  Makefile  Procfile  anticaptcha.crx  flush_ups.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0a062b21d359_.py
drbl_manage/: __init__.py  browser.py  db.py  db_tools.py  do_app.py  dribbble.py  droplet.py  main.py  mem.py  models.py  scheduler.py  schemas.py  web.py
drbl_manage/api/: routes.py
drbl_manage/api/local_routes/: api.py
drbl_manage/templates/: base.html  index.html
