[tool.poetry]
name = "drbl_manage"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
selenium = "^4.0.0"
SQLAlchemy = "^1.4.27"
psycopg2-binary = "^2.9.2"
alembic = "^1.7.5"
loguru = "^0.5.3"
Faker = "^9.8.2"
APScheduler = "^3.8.1"
redis = "^4.0.1"
gunicorn = "^20.1.0"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"
types-requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
